fixed flexbox alignments in header

--- a/styles/_fonts.scss
+++ b/styles/_fonts.scss
@@ -60,3 +60,8 @@ nav a {
     color: #FFF;
     text-transform: uppercase;
 }
+
+nav a:hover, a:focus {
+    font-weight: bold;
+}
+
