--- a/styles/main.scss
+++ b/styles/main.scss
@@ -50,16 +50,21 @@ header {
     text-align: center;
     background-image: url('/images/hero1.png');
     background-size: cover;
-    width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: space-evenly;
     min-height: rem(820px);
 }
 
 .search-panel {
     display: flex;
     flex-direction: column;
+    flex-grow: 1;
+    align-items: center;
+    justify-content: center;
+}
+
+.scroll-down {
+    padding-top: 5%;
 }
 
 .logo-box {
@@ -85,6 +90,7 @@ input {
     background-color: $secondary-bg;
     display: flex;
     justify-content: center;
+    align-self: flex-end;
     width: 100%;
 }
 
